--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,15 @@
 {
   "compilerOptions": {
     "rootDir": "./src",
-    "outDir": "./dist",
+    "outDir": "./types",
+    "allowJs": true,
+    "checkJs": true,
     "module": "ESNext",
     "target": "ESNext",
-    "declaration": true
-  }
+    "noEmit": true,
+    "strict": true
+  },
+  "include": [
+    "./src/**/*"
+  ]
 }
