HypeScript: The Never-Ending Saga
Haven't brought my latest learnings over here in a while! I have been using TypeScript a ton in my other projects. I did a lot of work to Menu Drop in TypeScript, and NBTify is completely TypeScript-based now! It's really awesome.

Since I have been experimenting with publishing to npm, I think type definitions are a key part to making a library really strong for your users. It works great to use it to develop the library too.

Fully brought over Smart Text Editor to be fully JSDoc-typed out, which is a massive step forward! Since that's the case now, it really does make sense for my other projects that it relies on, to also be typed out (This one, Menu Drop, and eventually NBTify once I add NBT editing support in STE).

A good amount of these upcoming changes I have recently been looking into for Menu Drop, and I think they will also work great for Num Text, too.

Once I have both of them up and running a bit more, I think I am going to publish both Num Text and Menu Drop to npm too! Then I can import them in my projects with CDN URLs, and also use HTML Import Maps to reference them by their module names, rather than always by a CDN URL. ES Module Shims is an outstanding project to help make this possibly, in the few remaining browsers where Import Maps aren't supported yet. Using Import Maps, I can also safely depend on writing ES Module code that can run both directly in the browser, *and* in NodeJS, without any module transpilation!

https://github.com/guybedford/es-module-shims

Note, I know I'm still using TypeScript here, so I'm still transpiling that down to JavaScript to make it runnable, but you get type definitions out of that, which is a super huge feature. In my projects where I tend to be using type and interface definitions a lot, it feels more justified to use TypeScript directly. So far, JSDoc documentation types have worked really well for implementation code, where it depends on already strongly-typed libraries to

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,10 @@
 {
   "compilerOptions": {
     "rootDir": "./src",
-    "outDir": "./types",
-    "allowJs": true,
-    "checkJs": true,
+    "outDir": "./dist",
     "module": "ESNext",
     "target": "ESNext",
-    "noEmit": true,
+    "declaration": true,
     "strict": true
-  },
-  "include": [
-    "./src/**/*"
-  ]
+  }
 }
