--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "num-text",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "A simple Web Component that adds line numbers and syntax highlighting to the default textarea element!",
   "type": "module",
-  "main": "src/index.js",
-  "types": "types/index.d.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Offroaders123/Num-Text-Component.git"
