--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "num-text",
   "version": "1.0.0",
-  "types": "./types/script.d.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "devDependencies": {
     "@types/prismjs": "^1.26.0"
   }
