--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
     "module": "ESNext",
     "target": "ESNext",
     "declaration": true,
-    "strict": true
+    "sourceMap": true,
+    "strict": true,
+    "noImplicitOverride": true
   }
 }
