--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "rootDir": "./src",
     "outDir": "./dist",
     "module": "ESNext",
+    "moduleResolution": "NodeNext",
     "target": "ESNext",
     "declaration": true,
     "sourceMap": true,
