Strict Typings Config
Bringing these changes from my (latest? didn't think this was new) projects. This one was just about right before I was fully onboard with TypeScript and being as type-safe as possible. It was before I tried Vite too.

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "tsc",
-    "dev": "tsc -w"
+    "build": "tsc --project ./tsconfig.build.json",
+    "dev": "tsc --watch"
   },
   "devDependencies": {
     "@types/prismjs": "^1.26.0",
