--- a/package.json
+++ b/package.json
@@ -7,11 +7,7 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsc --project ./tsconfig.build.json",
-    "dev": "tsc --watch"
-  },
-  "devDependencies": {
-    "@types/prismjs": "^1.26.0",
-    "typescript": "^5.0.4"
+    "dev": "vite ./test"
   },
   "repository": {
     "type": "git",
@@ -32,5 +28,11 @@
     "url": "https://github.com/Offroaders123/Num-Text/issues"
   },
   "homepage": "https://github.com/Offroaders123/Num-Text#readme",
+  "devDependencies": {
+    "construct-style-sheets-polyfill": "^3.1.0",
+    "es-module-shims": "^1.10.0",
+    "typescript": "^5.6.2",
+    "vite": "^5.4.8"
+  },
   "sideEffects": true
 }
