--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,11 @@
     "module": "NodeNext",
     "target": "ESNext",
     "isolatedModules": true,
+    "types": [
+      "vite/client"
+    ],
     "noEmit": true,
+    "skipLibCheck": true,
     "strict": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
